Closed Bug 292312 Opened 21 years ago Closed 21 years ago

Scroll bars (scrollbars) are too small

Categories

(Core :: Layout, defect)

x86
All
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: bugzilla.spam2, Assigned: roc)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(3 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050428 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050428 Scroll bars from windows and form elements are too small. This happens only with Modern theme. Classic is not affected. This regressed since 20050427. Reproducible: Always
Recent Firefox nightlies are also not affected.
Scroll bars in preferences and MailNews thread/folder pane are also not affected.
I can confirm this behaviour too with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050428 Mnenhy/0.7.2.0 {Build ID 2005042822} and Modern-Theme. Classic-Theme is not affectet. Componet would be XP Apps as I know, matches better than general Browser Bugs. Surely I have no editbugs privileges, so I can't change this. :)
Status: UNCONFIRMED → NEW
Ever confirmed: true
same problem in gtk2+xft
OS: Windows XP → All
This bug has been caused by the fix for bug 240276. Debug build shows these assertions failing: ###!!! ASSERTION: We assume that the vertical scrollbar width is fixed: 'aMin->width == pref.width', file mozilla/layout/generic/nsGfxScrollFrame.cpp, line 320 Break: at file mozilla/layout/generic/nsGfxScrollFrame.cpp, line 320 ###!!! ASSERTION: We assume that the horizontal scrollbar height is fixed: 'aMin->height == pref.height', file mozilla/layout/generic/nsGfxScrollFrame.cpp, line 323 Break: at file mozilla/layout/generic/nsGfxScrollFrame.cpp, line 323 The actual values are pref.width=225, aMin->width=90
Severity: normal → major
Component: General → Layout
Keywords: regression
Product: Mozilla Application Suite → Core
Assignee: general → roc
I can confirm this one too using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050429 with Modern theme. With classic, it's all normal. It even uses the visual style setting for scrollbar width. Tried to see if it would dissappear using other themes, only Nautipolis isn't affected because of it's similarity to classic. Graymodern, Marszilla and Venerable Modern are affected, with Venerable Modern showing no scrollbars at all.
This is happening because I changed the code to use the scrollbar min-size instead of pref-size. I guess I need to undo that, preferably to use both pref-size and min-size where appropriate.
*** Bug 292495 has been marked as a duplicate of this bug. ***
*** Bug 292502 has been marked as a duplicate of this bug. ***
Hardware: PC → All
Would you prefer it if we changed the slider styles to use min-width/height?
That would be an easier fix, but really we should be able to support different min-size and pref-size for scrollbars.
Attached patch fixSplinter Review
This patch changes us back to use pref-size almost everywhere, except when determining whether to show a scrollbar at all; for that we check the min-size. (nsXULScrollFrame::GetMinSize also uses min-size.)
Attachment #182375 - Flags: superreview?(dbaron)
Attachment #182375 - Flags: review?(dbaron)
*** Bug 292606 has been marked as a duplicate of this bug. ***
*** Bug 292655 has been marked as a duplicate of this bug. ***
Comment on attachment 182375 [details] [diff] [review] fix >- if (aVertical) { >- NS_ASSERTION(aMin->width == pref.width, >- "We assume that the vertical scrollbar width is fixed"); >- } else { >- NS_ASSERTION(aMin->height == pref.height, >- "We assume that the horizontal scrollbar height is fixed"); Those assertions are annoying too :-/
Flags: blocking1.8b2?
Attached patch fix for bitrot (obsolete) — Splinter Review
I could not apply original patch, so I made this bitrot patch by hand from initial diff, I take no credit it was all roc's code. building with it now; I'll leave it up to roc or Dbaron if this should obsolete previous patch or take the requests here or not.
Comment on attachment 182558 [details] [diff] [review] fix for bitrot Sorry for bugspam, I made a key error at + aBox->GetMinSize(... (Should have been PrefSize) I'll post a new "updated for bitrot" patch if roc does not beat me to it.
Attachment #182558 - Attachment is obsolete: true
this is the correct bitrot fix, sorry to anyone whom applied my last one. [still entirely rocs code]
Attachment #182375 - Flags: superreview?(dbaron)
Attachment #182375 - Flags: superreview+
Attachment #182375 - Flags: review?(dbaron)
Attachment #182375 - Flags: review+
Comment on attachment 182375 [details] [diff] [review] fix layout regression fix
Attachment #182375 - Flags: approval1.8b2?
*** Bug 293105 has been marked as a duplicate of this bug. ***
*** Bug 293152 has been marked as a duplicate of this bug. ***
Sorry for submitting a dupe for this (bug 293152). Perhaps someone can explain why THIS bug doesn't show up in a search (did another one just now) for 'scroll'?!? Also, why is bugzilla taking 2-3 minutes to return results? Peace
Attachment #182375 - Flags: approval1.8b2? → approval1.8b2+
*** Bug 293214 has been marked as a duplicate of this bug. ***
I'm back from vacation and stumbled across this one after downloading the latest build. Tweaking summary since my first Bugzilla search for "scrollbar" didn't result in me finding anything.
Summary: Scroll bars are too small → Scroll bars (scrollbars) are too small
*** Bug 293368 has been marked as a duplicate of this bug. ***
Hardware: All → PC
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Verified fixed in Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.8b2) Gecko/20050509 and Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050509
Flags: blocking1.8b2?
Verified FIXED using build 2005-05-16-06 on Windows XP Seamonkey trunk.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: