Bug 292312. Take scrollbar pref-sizes into account. r+sr=dbaron,a=asa